VERSION 0.1.1

IN PROGRESS...

======================================================
VERSION 0.1.0

10.10.2013

+ Localization support
+ New gui panel for target selection
+ Planets with rings and satellites
+ New game over ending, when loosing all crew
+ More interactivity for dungeons: buttons and doors

=====================================================

VERSION 0.0.10

17.09.2013

* Extended dialog system. Dialogs can now have different initial statements, based on world state
+ New animated popup for planet landing. As landscape generation can take up to a minute, user must be sure
that the game has not hanged up
+ Added plants to planet surface
* Moved some research projects to external json files.
+ Planets and space objects can now be scanned.
+ Added gui panel that pops up when some interaction is available
+ Added loading of .tmx maps from Tiled Editor

=====================================================
VERSION 0.0.9

15.08.2013

+ New content
* Monster image generator moved to separate project - 'Frankenstein'
* New star sprites from Dname
* New planet types
* Multiple bugfixes and some improvements based on /gd-found issues
* Better build

=====================================================
VERSION 0.0.8

31.07.2013

+ New GUI system using niffy-gui library
* Nicer sprites for some objects
* Planetary landscape now generated using Perlin noise, slow but effective
* Crew weapons are now stored in json
+ Engineering upgrade system implemented

=====================================================
VERSION 0.0.7

15.05.2013

+ More tutorials at the beginning of game
+ Refilling lost crewmembers on Earth. They also reduce resulting score
+ Alien animal sprite generator implemented and used for generating sprites
+ Each star system now has a name

=====================================================
VERSION 0.0.6

24.04.2013

+ Generating sprites for planets
* Nice portraits for dialogs made by gerardivn